--- a/index.html
+++ b/index.html
@@ -18,126 +18,184 @@
 
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <span class="navbar-brand">Mobius Final Fantasy Weapon Boost Calculator</span>
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <span class="navbar-brand">Mobius Final Fantasy Weapon Boost Calculator</span>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#">Save</a>
+                    </li>
+                    <li>
+                        <a href="#" data-toggle="modal" data-target="#exportModal">Export</a>
+                    </li>
+                    <li>
+                        <a href="#" data-toggle="modal" data-target="#importModal">Import</a>
+                    </li>
+                    <li>
+                        <a href="#" id="reset-all">Reset</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
     <div class="container-fluid">
         <div class="row">
-        <div id="weapon-select-area" class="col-sm-2">
-            <h4>Weapon List</h4>
-            <input id="weapon-search" type="text" placeholder="Search weapons...">
-            <select id="weapon-select" size=16></select>
-            <button id="weapon-add" class="btn-dark">Add to Boost</button>
-            <div id="boost-settings">
-                <h4>Boost Settings</h4>
-                <form>
+            <div id="weapon-select-area" class="col-sm-2">
+                <h4>Weapon List</h4>
+                <input id="weapon-search" type="text" placeholder="Search weapons...">
+                <select id="weapon-select" size=16></select>
+                <button id="weapon-add" class="btn-dark">Add to Boost</button>
+                <div id="boost-settings">
+                    <h4>Boost Settings</h4>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" title="288 natural stamina regeneration per day">
+                        <label data-toggle="tooltip" data-placement="right" title="288 natural stamina regeneration per day">
                             <input type="checkbox" data-option="natural-sp-stam" checked> Use natural SP stamina
                         </label>
                     </div>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" title="288 natural stamina regeneration per day">
+                        <label data-toggle="tooltip" data-placement="right" title="288 natural stamina regeneration per day">
                             <input type="checkbox" data-option="natural-mp-stam" checked> Use natural MP stamina
                         </label>
                     </div>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" title="per elixir used">
+                        <label data-toggle="tooltip" data-placement="right" title="per elixir used">
                             <input type="checkbox" data-option="mobius-day"> Double Stamina Refill
                         </label>
                     </div>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" title="4.5 minutes per stamina spent, instead of 3">
+                        <label data-toggle="tooltip" data-placement="right" title="4.5 minutes per stamina spent, instead of 3">
                             <input type="checkbox" data-option="bahamut-lagoon"> Bahamut Lagoon
                         </label>
                     </div>
-
                     <div class="form-group">
                         <label>
                             Max SP Stamina
-                            <input type="number" min=0 value=90>
+                            <input type="number" data-option="stamina-level" min=0 value=90>
                         </label>
                     </div>
-                </form>
-            </div>
-            <div id="other-settings" class="hidden">
-                <h4>Other Settings</h4>
-                <div class="checkbox">
-                    <label data-toggle="tooltip" title="Includes all weapons that are in JP version">
-                        <input type="checkbox" data-option="jp-only"> JP Content
-                    </label>
+                </div>
+                <div id="other-settings" class="hidden">
+                    <h4>Other Settings</h4>
+                    <div class="checkbox">
+                        <label data-toggle="tooltip" title="Includes all weapons that are in JP version">
+                            <input type="checkbox" data-option="jp-only"> JP Content
+                        </label>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div id="weapon-boost-area" class="col-sm-10 col-sm-offset-2">
-            <div id="weapon-slot-template" class="weapon-boost-group col hidden">
-                <div class="weapon-slot-info">
-                    <div class="weapon-slot-name">
-                        <img src="http://via.placeholder.com/50x50" width=50 height=50>
-                        <label>Weapon Name</label>
+            <div id="weapon-boost-area" class="col-sm-10 col-sm-offset-2">
+                <div id="weapon-slot-template" class="weapon-boost-group col hidden">
+                    <div class="weapon-slot-info">
+                        <div class="weapon-slot-name">
+                            <img src="https://via.placeholder.com/50x50" width=50 height=50>
+                            <label>Weapon Name</label>
+                        </div>
+                        <div class="weapon-mod-count">
+                            <label>Number of modifications available:
+                                <span>0</span>
+                            </label>
+                        </div>
+                        <div class="weapon-slot-close">
+                            <button type="button" class="btn-close">
+                                <span>&times</span>
+                            </button>
+                        </div>
                     </div>
-                    <div class="weapon-mod-count">
-                        <label>Number of modifications available:
-                            <span>0</span>
-                        </label>
+                    <div class="weapon-slot-stat">
+                        <div class="stat-calc-input"></div>
+                        <div class="stat-calc-result">
+                            <table class="weapon-stat">
+                                <tr>
+                                    <th>TOTAL BOOST TIME</th>
+                                    <th>NATURAL BOOST TIME</th>
+                                    <th>ELIXIR COST</th>
+                                </tr>
+                                <tr>
+                                    <td class="time-cost">0</td>
+                                    <td class="time-cost-natural">0</td>
+                                    <td class="elixir-cost">0</td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
-                    <div class="weapon-slot-close">
-                        <button type="button" class="btn-close">
-                            <span>&times</span>
+                    <div class="weapon-slot-notification">
+                        <label></label>
+                    </div>
+                </div>
+                <div id="preset-template" class="hidden">
+                    <div class="dropdown">
+                        <button class="dropdown-toggle btn-dark" type="button" data-toggle="dropdown">
+                            <span class="caret"></span>
                         </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#" data-preset="preset-base">Base Stat</a>
+                                <a href="#" data-preset="preset-min">Minimum Stat (with all mods)</a>
+                                <a href="#" data-preset="preset-max">Max Boost</a>
+                            </li>
+                        </ul>
                     </div>
-                </div>
-                <div class="weapon-slot-stat">
-                    <div class="stat-calc-input"></div>
-                    <div class="stat-calc-result">
-                        <table class="weapon-stat">
-                            <tr>
-                                <th>TOTAL BOOST TIME</th>
-                                <th>NATURAL BOOST TIME</th>
-                                <th>ELIXIR COST</th>
-                            </tr>
-                            <tr>
-                                <td class="time-cost">0</td>
-                                <td class="time-cost-natural">0</td>
-                                <td class="elixir-cost">0</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-                <div class="weapon-slot-notification">
-                    <label></label>
-                </div>
-            </div>
-            <div id="preset-template" class="hidden">
-                <div class="dropdown">
-                    <button class="dropdown-toggle btn-dark" type="button" data-toggle="dropdown">
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#" data-preset="preset-base">Base Stat</a>
-                            <a href="#" data-preset="preset-min">Minimum Stat (with all mods)</a>
-                            <a href="#" data-preset="preset-max">Max Boost</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
     </div>
+    <div class="modal fade" id="exportModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title text-center">Export Calculator Settings</h3>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group export-group">
+                            <label class="control-label">Code</label>
+                            <input type="text" class="form-control export-code">
+                            <p class="text-center">Click to copy</p>
+                        </div>
+                        <div class="form-group export-group">
+                            <label class="control-label">URL</label>
+                            <input type="text" class="form-control export-url">
+                            <p class="text-center">Click to copy</p>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="modal fade" id="importModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title text-center">Import Calculator Settings</h3>
+                </div>
+                <div class="modal-body">
+                    <input type="text" class="form-control">
+                    <div class="text-center">
+                        <button class="btn-dark btn-modal" data-dismiss="modal">Import</button>
+                    </div>
+                </div>
+            </div>
 
+            <script src="js/editablegrid/editablegrid.js"></script>
+            <script src="js/editablegrid/editablegrid_renderers.js"></script>
+            <script src="js/editablegrid/editablegrid_editors.js"></script>
+            <script src="js/editablegrid/editablegrid_validators.js"></script>
+            <script src="js/editablegrid/editablegrid_utils.js"></script>
+            <script src="js/editablegrid/editablegrid_charts.js"></script>
 
-    <script src="js/editablegrid/editablegrid.js"></script>
-    <script src="js/editablegrid/editablegrid_renderers.js"></script>
-    <script src="js/editablegrid/editablegrid_editors.js"></script>
-    <script src="js/editablegrid/editablegrid_validators.js"></script>
-    <script src="js/editablegrid/editablegrid_utils.js"></script>
-    <script src="js/editablegrid/editablegrid_charts.js"></script>
+            <script src="js/compress/Base64.js"></script>
+            <script src="js/compress/deflate.js"></script>
+            <script src="js/compress/crc32.js"></script>
+            <script src="js/compress/gzip.js"></script>
+            <script src="js/compress/jsonc.js"></script>
 
-    <script src="js/common.js"></script>
-    <script src="js/db.js"></script>
-    <script src="js/calc.js"></script>
-    <script src="js/weaponSlot.js"></script>
-    <script src="js/index.js"></script>
+            <script src="js/common.js"></script>
+            <script src="js/db.js"></script>
+            <script src="js/calc.js"></script>
+            <script src="js/weaponSlot.js"></script>
+            <script src="js/index.js"></script>
 </body>
 
 </html>
