Implemented cookie saves

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Save</a>
+                        <a href="#" id="save-cookie">Save</a>
                     </li>
                     <li>
                         <a href="#" data-toggle="modal" data-target="#exportModal">Export</a>
