--- a/index.html
+++ b/index.html
@@ -177,25 +177,31 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
-            <script src="js/editablegrid/editablegrid.js"></script>
-            <script src="js/editablegrid/editablegrid_renderers.js"></script>
-            <script src="js/editablegrid/editablegrid_editors.js"></script>
-            <script src="js/editablegrid/editablegrid_validators.js"></script>
-            <script src="js/editablegrid/editablegrid_utils.js"></script>
-            <script src="js/editablegrid/editablegrid_charts.js"></script>
+    <span id="notification-all" class="toaster" style="display: none;">
+        Placeholder Notification
+    </span>
 
-            <script src="js/compress/Base64.js"></script>
-            <script src="js/compress/deflate.js"></script>
-            <script src="js/compress/crc32.js"></script>
-            <script src="js/compress/gzip.js"></script>
-            <script src="js/compress/jsonc.js"></script>
+    <script src="js/editablegrid/editablegrid.js"></script>
+    <script src="js/editablegrid/editablegrid_renderers.js"></script>
+    <script src="js/editablegrid/editablegrid_editors.js"></script>
+    <script src="js/editablegrid/editablegrid_validators.js"></script>
+    <script src="js/editablegrid/editablegrid_utils.js"></script>
+    <script src="js/editablegrid/editablegrid_charts.js"></script>
 
-            <script src="js/common.js"></script>
-            <script src="js/db.js"></script>
-            <script src="js/calc.js"></script>
-            <script src="js/weaponSlot.js"></script>
-            <script src="js/index.js"></script>
+    <script src="js/compress/Base64.js"></script>
+    <script src="js/compress/deflate.js"></script>
+    <script src="js/compress/crc32.js"></script>
+    <script src="js/compress/gzip.js"></script>
+    <script src="js/compress/jsonc.js"></script>
+
+    <script src="js/common.js"></script>
+    <script src="js/db.js"></script>
+    <script src="js/calc.js"></script>
+    <script src="js/weaponSlot.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
