Fully update DB, added JP content toggle

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                         </label>
                     </div>
                 </div>
-                <div id="other-settings" class="hidden">
+                <div id="other-settings">
                     <h4>Other Settings</h4>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" title="Includes all weapons that are in JP version">
-                            <input type="checkbox" data-option="jp-only"> JP Content
+                        <label data-toggle="tooltip" data-placement="right" title="Includes all weapons that are in JP version">
+                            <input type="checkbox" data-option="jp-only"> Includes JP content
                         </label>
                     </div>
                 </div>
