Minor UI adjustment

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#" id="save-cookie">Save</a>
+                        <a id="save-cookie">Save</a>
                     </li>
                     <li>
-                        <a href="#" data-toggle="modal" data-target="#exportModal">Export</a>
+                        <a data-toggle="modal" data-target="#exportModal">Export</a>
                     </li>
                     <li>
-                        <a href="#" data-toggle="modal" data-target="#importModal">Import</a>
+                        <a data-toggle="modal" data-target="#importModal">Import</a>
                     </li>
                     <li>
-                        <a href="#" id="reset-all">Reset</a>
+                        <a id="reset-all">Reset</a>
                     </li>
                 </ul>
             </div>
