--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
                 <div id="boost-settings">
                     <h4>Boost Settings</h4>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" data-placement="right" title="288 natural stamina regeneration per day">
+                        <label data-toggle="tooltip" data-trigger="hover" data-placement="right" title="288 natural stamina regeneration per day">
                             <input type="checkbox" data-option="natural-sp-stam" checked> Use natural SP stamina
                         </label>
                     </div>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" data-placement="right" title="288 natural stamina regeneration per day">
+                        <label data-toggle="tooltip" data-trigger="hover" data-placement="right" title="288 natural stamina regeneration per day">
                             <input type="checkbox" data-option="natural-mp-stam" checked> Use natural MP stamina
                         </label>
                     </div>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" data-placement="right" title="per elixir used">
+                        <label data-toggle="tooltip" data-trigger="hover" data-placement="right" title="per elixir used">
                             <input type="checkbox" data-option="mobius-day"> Double Stamina Refill
                         </label>
                     </div>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" data-placement="right" title="4.5 minutes per stamina spent, instead of 3">
+                        <label data-toggle="tooltip" data-trigger="hover" data-placement="right" title="4.5 minutes per stamina spent, instead of 3">
                             <input type="checkbox" data-option="bahamut-lagoon"> Bahamut Lagoon
                         </label>
                     </div>
@@ -79,7 +79,7 @@
                 <div id="other-settings">
                     <h4>Other Settings</h4>
                     <div class="checkbox">
-                        <label data-toggle="tooltip" data-placement="right" title="Includes all weapons that are in JP version">
+                        <label data-toggle="tooltip" data-trigger="hover" data-placement="right" title="Includes all weapons that are in JP version">
                             <input type="checkbox" data-option="jp-only"> Includes JP content
                         </label>
                     </div>
@@ -197,8 +197,9 @@
     <script src="js/compress/gzip.js"></script>
     <script src="js/compress/jsonc.js"></script>
 
-    <script src="js/common.js"></script>
+    <script src="js/global.js"></script>
     <script src="js/db.js"></script>
+    <script src="js/weaponStat.js"></script>
     <script src="js/calc.js"></script>
     <script src="js/weaponSlot.js"></script>
     <script src="js/index.js"></script>
