Implemented new search method, throttle keyword search

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="row">
       <div id="weapon-select-area" class="col-sm-2">
         <h4>Weapon List</h4>
-        <input id="weapon-search" type="text" placeholder="Try 'ranger', 'rogue', 'meia' or weapon name">
+        <input id="weapon-search" type="text" placeholder="Try 'rogue', 'meia' or 'painful crit'">
         <select id="weapon-select" size=16></select>
         <button id="weapon-add" class="btn-dark">Add to Boost</button>
         <div id="control-panel">
@@ -260,6 +260,8 @@
   <script src="js/compress/crc32.js"></script>
   <script src="js/compress/gzip.js"></script>
   <script src="js/compress/jsonc.js"></script>
+
+  <script src="js/plugin/jquery.debounce-1.0.5.js"></script>
 
   <script src="js/global.js"></script>
   <script src="js/db.js"></script>
