--- a/index.html
+++ b/index.html
@@ -64,8 +64,13 @@
             </label>
           </div>
           <div class="checkbox">
-            <label data-toggle="tooltip" data-trigger="hover" data-placement="right" title="4.5 minutes per stamina spent, instead of 3">
+            <label data-toggle="tooltip" data-trigger="hover" data-placement="right" title="per stamina spent: 4.5 minutes without VIP or 6 minutes with VIP">
               <input type="checkbox" data-option="bahamut-lagoon" data-option-group="boost"> Bahamut Lagoon
+            </label>
+          </div>
+          <div class="checkbox">
+            <label data-toggle="tooltip" data-trigger="hover" data-placement="right" title="per stamina spent outside Bahamut Lagoon: 4 minutes with VIP instead of 3">
+              <input type="checkbox" data-option="vip-mode" data-option-group="boost"> VIP Mode
             </label>
           </div>
           <div class="form-group">
